--- a/LearnUp/src/App.css
+++ b/LearnUp/src/App.css
@@ -1,4 +1,16 @@
 #root {
   margin: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  place-content: center;
 }
+
+main {
+  max-width: 1440px;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+}
+
 
